--- a/library-management-system/src/main/resources/static/css/styles.css
+++ b/library-management-system/src/main/resources/static/css/styles.css
@@ -16,6 +16,8 @@ h1 {
     text-align: center;
     padding: 20px 0px;
     text-transform: uppercase;
+    color: green;
+    text-shadow: 2px 2px 2px black;
 }
 
 table {
@@ -35,11 +37,18 @@ td {
 
 a {
     text-decoration: none;
-    color: blue;
-    /* border: 1px solid blue; */
-    background-color: aqua;
+    color: white;
+    background-color: rgb(46, 46, 255);
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
     padding: 5px 10px;
     /* margin-left: 150px; */
+}
+
+a:hover {
+    background-color: rgb(16, 179, 254);
 }
 
 /* button {
@@ -176,11 +185,11 @@ input {
 }
 
 thead tr, tbody tr:nth-child(even) {
-    background-color: rgb(49, 236, 236);
+    background-color: rgb(6, 185, 255);
 }
 
 tbody tr:nth-child(odd) {
-    background-color: rgb(160, 255, 255);
+    background-color: rgb(173, 237, 255);
 }
 
 .ad_btn {
@@ -221,5 +230,16 @@ tbody tr:nth-child(odd) {
     gap: 20px;
     text-align: center;
     align-items: center;
-
 }
+
+#align-center {
+    display: flex;
+    justify-content: center;
+}
+
+span {
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
