--- a/library-management-system/src/main/resources/templates/viewBooks.html
+++ b/library-management-system/src/main/resources/templates/viewBooks.html
@@ -8,36 +8,38 @@
 </head>
 <body>
   <h1>Books Available</h1>
-  <table>
-    <thead>
-    <tr>
-      <th>Book Name</th>
-      <th>Book Number</th>
-      <th>Author Name</th>
-      <th>Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="books : ${availablebooks}">
-      <td th:text="${books.bookName}"></td>
-      <td th:text="${books.bookId}"></td>
-      <td th:text="${books.author}"></td>
-      <td>
-        <a th:if="${books.available}"
-           th:href="@{/isAvailable(id=${books.id}, username=${session.loggedInUser.username})}"
-           style="margin-left: 0px;"
-           id="update_btn">Take</a>
-
-        <a th:unless="${books.available}"
-           th:href="@{/isAvailable(id=${books.id}, username=${session.loggedInUser.username})}"
-           style="margin-left: 0px;"
-           id="delete_btn">Return</a>
-
-        <span th:unless="${books.available}">Taken</span>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+  <div id="align-center">
+    <table>
+      <thead>
+      <tr>
+        <th>Book Name</th>
+        <th>Book Number</th>
+        <th>Author Name</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="books : ${availablebooks}">
+        <td th:text="${books.bookName}"></td>
+        <td th:text="${books.bookId}"></td>
+        <td th:text="${books.author}"></td>
+        <td>
+          <a th:if="${books.available}"
+             th:href="@{/isAvailable(id=${books.id}, username=${session.loggedInUser != null ? session.loggedInUser.username : ''})}"
+             style="margin-left: 0px;"
+             id="update_btn">Take</a>
+  
+          <a th:unless="${books.available}"
+             th:href="@{/isAvailable(id=${books.id}, username=${session.loggedInUser.username})}"
+             style="margin-left: 0px;"
+             id="delete_btn">Return</a>
+  
+          <span th:unless="${books.available}">Taken</span>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
   <div id="div1"></div>
 </body>
 </html>
