--- a/exam-system/src/main/resources/templates/createExam.html
+++ b/exam-system/src/main/resources/templates/createExam.html
@@ -11,7 +11,7 @@
         <input type="text" th:field="*{examName}" name="examName" id="examName" required> <br>
         <br>
         <label for="noOfQuestions">No of Questions : </label>
-        <input type="number" min="1" max="20" th:field="*{noOfQuestions}" name="noOfQuestions" id="noOfQuestions" required> <br>
+        <input type="number" min="5" max="20" step="5" th:field="*{noOfQuestions}" name="noOfQuestions" id="noOfQuestions" required> <br>
         <br>
         <button type="submit">SUBMIT</button>
     </form>
