--- a/exam-system/src/main/resources/templates/adminDashboard.html
+++ b/exam-system/src/main/resources/templates/adminDashboard.html
@@ -7,5 +7,6 @@
 <body>
     <h2>Admin Dashboard</h2>
     <button><a th:href="@{/add/faculty}">ADD FACULTY</a></button>
+    <button><a th:href="@{/admin/logout}">LOG OUT</a></button>
 </body>
 </html>
