--- a/exam-system/src/main/resources/templates/addQuestions.html
+++ b/exam-system/src/main/resources/templates/addQuestions.html
@@ -3,42 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <title>Add Questions</title>
+  <link rel="stylesheet" href="../static/css/styles.css">
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h2>Add Questions</h2>
 
-<form th:action="@{/submitQuestions}" th:object="${questionForm}" method="post">
-  <input type="hidden" name="examId" th:value="${examId}">
-
-  <div th:each="i : ${#numbers.sequence(0, noOfQuestions - 1)}">
-    <h3>Question No: <span th:text="${i + 1}"></span></h3>
-    <input type="hidden" th:field="*{questionList[__${i}__].questionNumber}" th:value="${i + 1}">
-    <label>Question:</label>
-    <input type="text" th:field="*{questionList[__${i}__].question}" required> <br><br>
-
-    <label>Option 1:</label>
-    <input type="text" th:field="*{questionList[__${i}__].option1}" required> <br><br>
-
-    <label>Option 2:</label>
-    <input type="text" th:field="*{questionList[__${i}__].option2}" required> <br><br>
-
-    <label>Option 3:</label>
-    <input type="text" th:field="*{questionList[__${i}__].option3}" required> <br><br>
-
-    <label>Option 4:</label>
-    <input type="text" th:field="*{questionList[__${i}__].option4}" required> <br><br>
-
-    <label>Correct Answer:</label>
-    <select th:field="*{questionList[__${i}__].answer}">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-    </select> <br><br>
-  </div>
-
-  <button type="submit">Submit</button>
-</form>
+<div id="outer6">
+  <form th:action="@{/submitQuestions}" th:object="${questionForm}" method="post">
+    <input type="hidden" name="examId" th:value="${examId}">
+  
+    <div th:each="i : ${#numbers.sequence(0, noOfQuestions - 1)}">
+      <h3>Question No: <span th:text="${i + 1}"></span></h3>
+      <input type="hidden" th:field="*{questionList[__${i}__].questionNumber}" th:value="${i + 1}">
+      <table>
+        <tr>
+          <td><label>Question</label></td>
+          <td>:</td>
+          <td><textarea th:field="*{questionList[__${i}__].question}" required cols="70" rows="5"></textarea></td>
+        </tr>
+        <tr>
+          <td><label>Option 1</label></td>
+          <td>:</td>
+          <td><input type="text" th:field="*{questionList[__${i}__].option1}" required></td>
+        </tr>
+        <tr>
+          <td><label>Option 2</label></td>
+          <td>:</td>
+          <td><input type="text" th:field="*{questionList[__${i}__].option2}" required></td>
+        </tr>
+        <tr>
+          <td><label>Option 3</label></td>
+          <td>:</td>
+          <td><input type="text" th:field="*{questionList[__${i}__].option3}" required></td>
+        </tr>
+        <tr>
+          <td><label>Option 4</label></td>
+          <td>:</td>
+          <td><input type="text" th:field="*{questionList[__${i}__].option4}" required></td>
+        </tr>
+        <tr>
+          <td><label>Correct Answer</label></td>
+          <td>:</td>
+          <td><select th:field="*{questionList[__${i}__].answer}">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+          </select></td>
+        </tr>
+      </table>
+      <br>
+      <hr><br>
+  
+    </div>
+  
+    <button type="submit" style="margin-left: 200px;">Submit</button>
+  </form>
+</div>
 
 </body>
 </html>
