--- a/exam-system/src/main/resources/templates/attendExam.html
+++ b/exam-system/src/main/resources/templates/attendExam.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Attend Exam</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-<span>Exam No : </span><span th:text="${examId}"></span>
+<div id="space-apply">
+    <span>Exam No : </span><span th:text=" ${examId}"></span>
 <br><br>
 <form th:action="@{/submitExam}" method="post" th:object="${examSubmission}">
     <input type="hidden" th:field="*{examId}">
@@ -13,15 +16,30 @@
     <div th:each="qn : ${questionSet}">
         <h3 th:text="'Question No ' + ${qn.questionNumber}"></h3>
         <p th:text="${qn.question}"></p>
-
-        <input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="1"/> <span th:text="${qn.option1}"></span>
-        <input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="2"/> <span th:text="${qn.option2}"></span>
-        <input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="3"/> <span th:text="${qn.option3}"></span>
-        <input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="4"/> <span th:text="${qn.option4}"></span>
+        <table>
+            <tr>
+                <td><input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="1"/></td>
+                <td><span class="option" th:text="${qn.option1}"></span></td>
+            </tr>
+            <tr>
+                <td><input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="2"/></td>
+                <td><span class="option" th:text="${qn.option2}"></span></td>
+            </tr>
+            <tr>
+                <td><input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="3"/></td>
+                <td><span class="option" th:text="${qn.option3}"></span></td>
+            </tr>
+            <tr>
+                <td><input type="radio" th:field="*{answers[__${qn.questionId}__]}" value="4"/></td>
+                <td><span class="option" th:text="${qn.option4}"></span></td>
+            </tr>
+            <br><br>
+        </table>
     </div>
 
     <button type="submit">SUBMIT</button>
 </form>
+</div>
 
 </body>
 </html>
