--- a/exam-system/src/main/resources/templates/adminLogin.html
+++ b/exam-system/src/main/resources/templates/adminLogin.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Login</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
   <div id="outer">
@@ -16,7 +18,7 @@
         <br>
         <label for="password">Password : </label>
         <input type="password" th:field="*{password}" name="password" id="password" required> <br><br>
-          <button type="submit">SUBMIT</button>
+          <button type="submit" style="margin-left: 70px;">SUBMIT</button>
       </form>
     </div>
   </div>
