--- a/exam-system/src/main/resources/templates/createExam.html
+++ b/exam-system/src/main/resources/templates/createExam.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Exam</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-    <h2>Create Exam</h2>
-    <form th:action="@{/create}" th:object="${exam}" method="post">
-        <label for="examName">Exam Name : </label>
-        <input type="text" th:field="*{examName}" name="examName" id="examName" required> <br>
-        <br>
-        <label for="noOfQuestions">No of Questions : </label>
-        <input type="number" min="5" max="20" step="5" th:field="*{noOfQuestions}" name="noOfQuestions" id="noOfQuestions" required> <br>
-        <br>
-        <button type="submit">SUBMIT</button>
-    </form>
+    <div id="outer4">
+        <div id="card">
+            <h2>Create Exam</h2>
+        <form th:action="@{/create}" th:object="${exam}" method="post">
+            <table>
+                <tr>
+                    <td><label for="examName">Exam Name : </label></td>
+                    <td><input type="text" th:field="*{examName}" name="examName" id="examName" required></td>
+                </tr>
+                <tr>
+                    <td><label for="noOfQuestions">No of Questions : </label></td>
+                    <td><input type="number" min="5" max="20" step="5" th:field="*{noOfQuestions}" name="noOfQuestions" id="noOfQuestions" required></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><button type="submit" style="margin-left: 70px;">SUBMIT</button></td>
+                </tr>
+            </table>
+        </form>
+        </div>
+    </div>
 </body>
 </html>
