--- a/exam-system/src/main/resources/templates/studentLogin.html
+++ b/exam-system/src/main/resources/templates/studentLogin.html
@@ -3,19 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Student Login</title>
+  <link rel="stylesheet" href="../static/css/styles.css">
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-<div id="outer">
+<div id="outer3">
   <h2>Student Login</h2>
   <div id="card">
     <p th:if="${error}" th:text="${error}" style="color: red;"></p>
     <form th:action="@{/student/login}" th:object="${student}" method="post">
-      <label for="rollNo">RollNo : </label>
-      <input type="number" th:field="*{rollNo}" name="rollNo" id="rollNo" required> <br>
-      <br>
-      <label for="password">Password : </label>
-      <input type="password" th:field="*{password}" name="password" id="password" required> <br><br>
-      <button type="submit">SUBMIT</button>
+      <table>
+        <tr>
+          <td><label for="rollNo">RollNo : </label></td>
+          <td><input type="number" th:field="*{rollNo}" name="rollNo" id="rollNo" required></td>
+        </tr>
+        <tr>
+          <td><label for="password">Password : </label></td>
+          <td><input type="password" th:field="*{password}" name="password" id="password" required> <br><br></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><button type="submit">SUBMIT</button></td>
+        </tr>
+      </table>
     </form>
   </div>
 </div>
