--- a/exam-system/src/main/resources/static/css/styles.css
+++ b/exam-system/src/main/resources/static/css/styles.css
@@ -504,3 +504,50 @@ span {
     margin: 20px 0;
 }
 
+#print h3 {
+    color: #333;
+    margin-bottom: 10px;
+    margin-left: 100px;
+}
+
+/* Table Styling */
+#print table {
+    width: 80%;
+    margin: 20px auto;
+    border-collapse: collapse;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+#print td {
+    padding: 12px;
+    border: 1px solid #ddd;
+    text-align: left;
+    font-size: 16px;
+}
+
+#print tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+#print tr:hover {
+    background-color: #e8f0ff;
+}
+
+/* Button Styling */
+#print button {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    margin: 20px 0px 20px 100px;
+}
+
+#print button:hover {
+    background-color: #0056b3;
+}
